<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/main_contact"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_user" />

        <EditText
            android:id="@+id/reg_user"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/shapes"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_pwd" />

        <EditText
            android:id="@+id/reg_pwd"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/shapes"
            android:inputType="textPassword"
            android:hint="@string/hint_addr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/shapes"
            android:text="@string/btn_reg" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/shapes"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>