<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_call"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/shapes"
            android:text="@string/call" />

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/shapes"
            android:text="@string/sms" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/add_contact"
            android:background="@drawable/shapes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/del"
            android:background="@drawable/shapes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_perUpdate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/update"
            android:background="@drawable/shapes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/shapes"
            android:text="@string/exit_contact" />
    </LinearLayout>

</RelativeLayout>